= News file for loccount =

1.3: 2019-02-20::
     Added support for Rebol, Verilog, Simula, Icon, VHDL.

1.2: 2017-12-05
     Work around bug in the parallelized treewalker that barfed on .. paths.

1.1: 2017-07-09
     Documentation fix for copy-paste error.
     Cleanup suggested by https://goreportcard.com/report/gitlab.com/esr/loccount

1.0: 2017-02-13::
     Initial release.