@@ -5,28 +5,39 @@
 loccount - count lines of code in a source tree and perform cost estimation
 
 == SYNOPSIS ==
-*loccount* [-c] [-e] [-i] [-l] [-u] [-x pathlist] [-V] [-?] file-or-dir
+*loccount* [-c] [-e] [-i] [-l] [-s] [-u] [-x pathlist] [-V] [-?] file-or-dir
 
 == DESCRIPTION ==
 
-This program counts source lines of code (SLOC) in one or more files
-or directories given on the command line.  A line of code is counted
-if it (a) includes characters other than whitespace and a terminating
-newline, and (b) is not composed solely of a comment or part of a
-comment.  Comment leaders and trailers in string literals (including
-multiline string literals) in languages that have them) are ignored.
+This program counts source lines of code (SLOC) and logical lines of
+code (LLOC) in one or more files or directories given on the command
+line.
+
+A line of code is counted in SLOC if it (a) includes characters other
+than whitespace and a terminating newline, and (b) is not composed
+solely of a comment or part of a comment.  Comment leaders and
+trailers in string literals (including multiline string literals) in
+languages that have them) are ignored.
+
+LLOC is counted by tallying SLOCS with line terminators; this is not
+available in all supported languages, as the concept may not fit the
+langage's syntax (e.g. the Lisp family) or its line-termination rules
+would require full parsing (e.g. Go). In these case LLOC will always
+be reported as 0. It is quite reliable in languages with C-like
+statement termination by semicolon.
 
 Optionally, this program can perform a cost estimation using the
 COCOMO I model. It uses the "organic"  profile of COCOMO I, which is
 generally appropriate for open-source projects.
 
-SLOC figures should be used with caution.  While they do predict
-project costs reasonably well, they are not appropriate for use as
-'productivity' measures; good code is often less bulky than bad code.
-Comparing SLOC across languages is also dubious, as differing
-languages can have very different complexity per line.
+SLOC/LLOC figures should be used with caution.  While they do predict
+project costs and defect incidence reasonably well, they are not
+appropriate for use as 'productivity' measures; good code is often
+less bulky than bad code.  Comparing SLOC across languages is also
+dubious, as differing languages can have very different complexity per
+line.
 
-With these qualifications, SLOC does have some other uses. It
+With these qualifications, SLOC/LLOC does have some other uses. It
 is quite effective for tracking changes in complexity and attack
 surface as a codebase evolves over time.
 
@@ -77,7 +88,10 @@ Report file path, line count, and type for each individual path.
 Dump the results as self-describing JSON records for for postprocessing.
 
 -l::
-List supported languages and exit.
+List languages for which we can report LLOC and exit.
+
+-s::
+List languages for which we can report SLOC and exit.
 
 -u::
 List paths of files that could not be classified into a type.
@@ -103,6 +117,9 @@ A few of sloccount's tests have been simplified in cases where the
 complexity came from a rare or edge case that the author judges to
 have become extinct since 2004.
 
+The reporting formats were substantially different in the 1.x versions
+due to absence of any LLOC fields.
+
 The base salary used for cost estimation will differ between these
 tools depending on time of last release.
 
@@ -125,6 +142,10 @@ literals will confuse this program and throw a warning.
 
 Literate Haskell (.lhs) is not supported.  (This is a regression from
 sloccount).
+
+LLOC counts in languages that use ac semicolon as an Algol-like
+statement separator - Sather, Simula, CLU, -  are somewhat too high,
+because "end" is counted as a statement.
 
 == REPORTING BUGS ==
 Report bugs to Eric S. Raymond <esr@thyrsus.com>.
