@@ -1,5 +1,8 @@
 = News file for loccount =
 
+Repository head::
+     Added ability to count LLOC in many languages.
+
 1.3: 2019-02-20::
      Added support for Rebol, Verilog, Simula, Icon, VHDL.
 
